--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,37 @@
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+/* fonts unifiers here */
+.karla{
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+  .markazi{
+    font-family: "Markazi Text", serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+  }
 /* Add code for container class below */
 .container {
     /* Add rules here */
       display: grid;
-      max-width: 100vw;
-      width: 1200px;
+      min-width: 100%;
+      width: 100%;
       min-height: 80vh;
       grid-template-columns: 100%;
       grid-template-rows: auto auto 1fr auto auto;
       grid-template-areas: header left main right footer;
 }
-body{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 /* Add media rules for container class below */
 @media (min-width: 440px) {
     .container {
     /* Add rules here */
+    width: 100%;
     grid-template-columns: 150px 1fr 150px;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "header header header" 
@@ -30,9 +44,8 @@ body{
 /* Properties for other selectors */
 .header {
     grid-area: header;
-    padding: 10px;
-    background-color:black;
-    color: #fff;
+    background-color:#fff;
+    color: #000;
     text-align: center;
 }
 .main {
@@ -56,4 +69,35 @@ body{
 .sidebar {
     padding: 25px;
     background-color:darkcyan;
+  }
+  /* Outside the grid */
+  .navbar{
+list-style: none;
+display: flex;
+flex-direction: row;
+gap: 30px;
+align-items: center;
+min-width: fit-content;
+padding: 0 50px;
+  }
+  .navbar a{
+    text-decoration: none;
+  }
+  .navbar li{
+    min-width: fit-content;
+  }
+  .header{
+        flex-direction: row;
+    align-items: center;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+  }
+  header{
+    margin-left: 10%;
+  }
+  nav{
+    margin-right: 7%;
   }
