--- a/src/styles.css
+++ b/src/styles.css
@@ -3,18 +3,38 @@
     margin: 0;
     box-sizing: border-box;
 }
+.reset-button {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    margin: 0;
+    font: inherit;
+    color: inherit;
+    cursor: pointer;
+    outline: none;
+    box-shadow: none;
+  }
+:root{
+    --primary-green: hsla(160,13%,33%,1.0);
+    --bright-yellow: hsla(50,91%,52%,1.0);
+    --warm: hsla(29,89%,86%,1.0);
+    --off-white: hsla(150,6%,93%,1.0);
+    --off-black: hsla(0,0%,20%,1.0);
+    --orange:hsla(19,78%,69%,1.0);
+}
+html{
+    font-size: 16px;
+}
 /* fonts unifiers here */
 .karla{
     font-family: "Karla", sans-serif;
     font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
+    /* font-style: normal; */
   }
   .markazi{
     font-family: "Markazi Text", serif;
     font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
+    /* font-style: normal; */
   }
 /* Add code for container class below */
 .container {
@@ -35,7 +55,7 @@
     grid-template-columns: 150px 1fr 150px;
     grid-template-rows: auto 1fr auto;
     grid-template-areas: "header header header" 
-                         "left main right" 
+                         "main main main" 
 					               "footer footer footer";
     }
 }
@@ -50,15 +70,8 @@
 }
 .main {
     grid-area: main;
-    padding: 25px;
 }
-.left {
-    grid-area: left;
-    background-color: peachpuff;
-  }
-.right {
-    grid-area: right;
-  }
+
 .footer {
     grid-area: footer;
     padding: 10px;
@@ -66,10 +79,7 @@
     color: #fff;
     text-align: center;
   }
-.sidebar {
-    padding: 25px;
-    background-color:darkcyan;
-  }
+
   /* Outside the grid */
   .navbar{
 list-style: none;
@@ -85,6 +95,7 @@ padding: 0 50px;
   }
   .navbar li{
     min-width: fit-content;
+    color: #000;
   }
   .header{
         flex-direction: row;
@@ -93,7 +104,7 @@ padding: 0 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+  
   }
   header{
     margin-left: 10%;
@@ -101,3 +112,194 @@ padding: 0 50px;
   nav{
     margin-right: 7%;
   }
+  /* Styling Hero box */
+.intro h1{
+    font-size: 6rem;
+    color:  var(--bright-yellow);
+    line-height: 1;
+    font-weight: 700;
+}
+.intro h3{
+    font-size: 3rem;
+    color:  var(--off-white);
+    line-height: 0.5;
+    font-weight: 400;
+    margin-bottom: 5%;
+}
+.intro p{
+    font-size: 1rem;
+    font-weight: 400;
+    color: var(--off-white);
+    width: 42%;
+}
+.hero-box{
+    align-items: center;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    flex-wrap: wrap; 
+    min-height: 500px;
+}
+.hero-box main{
+    width: 80%;
+    margin: 0 auto;
+    align-items: center;
+    display: flex;
+    align-content: center;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.intro{
+    width: 50%;
+}
+.hero-img{
+    position: absolute;
+    transform: translate(-130%, -20%);
+    filter: drop-shadow(2px 2px 4px var(--primary-green));
+}
+.reserve-btn{
+    width: 200px;
+    height: auto;
+    padding: 14px 24px;
+    border-radius: 12px;
+    border: 0;
+    background: linear-gradient(to bottom right, #F4CE14, #8E780C);
+    filter: drop-shadow(1px 1px 2px hsla(0,0%,20%,0.8));
+    margin-top: 5%;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: 900;
+    color: var(--off-black);
+}
+/* Highlights section */
+body{
+    background-color: var(--warm);
+}
+.card{
+    width: 300px;
+    min-height: fit-content;
+    background-color: var(--off-white);
+    border-radius: 14px;
+    padding-bottom: 3%;
+    filter: drop-shadow(3px 3px 4px hsla(160,13%,33%,0.7));
+}
+.highlights h2{
+    font-size: 3rem;
+    color: var(--off-black);
+}
+.highlights header{
+    margin-top: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+}
+.card-box{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: 5% auto;
+}
+.menu-btn{
+    width: 200px;
+    height: auto;
+    padding: 14px 24px;
+    border: 0;
+    cursor: pointer;
+    border-radius: 12px;
+    background: var(--primary-green);
+    filter: drop-shadow(1px 1px 2px hsla(0,0%,20%,0.8));
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--off-white);
+}
+.reserve-btn:active, .menu-btn:active{
+    transform: scale(1.02);
+    transition: 0.2s;
+}
+.pricing{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+.meal-name{
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--primary-green);
+}
+.meal-price{
+    font-size: 14px;
+    font-weight: 700;
+    color: var(--orange);
+}
+.card p{
+    padding: 0 10px;
+    margin: 8% 0;
+    font-size: 14px;
+    color: var(--off-black);
+}
+.order-card{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.card span{
+    padding: 0 10px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+/* Now to testimonials */
+.testimonials{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap: 30px;
+    background-color: var(--orange);
+}
+.testimonials h2{
+    margin:3% 2% auto;
+    font-size: 3rem;
+}
+.testimonials main{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 50px;
+}
+.board{
+    height: 220px;
+    width: 200px;
+    padding: 30px 10px;
+    background-color: var(--off-white);
+    border-radius:6px;
+}
+.board h5{
+    font-family: "Markazi Text", serif;
+    font-optical-sizing: auto;
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 5%;
+}
+.boards{
+    margin-bottom:7%;
+}
+.board figure{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 5%;
+}
+.board figcaption{
+    align-self: center;
+    font-weight: 500;
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+}
+.board p{
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+}
