--- a/src/reserve.css
+++ b/src/reserve.css
@@ -14,6 +14,11 @@
     outline: none;
     box-shadow: none;
   }
+  .error {
+    color: red;
+    font-size: 0.875em;
+    margin-top: 0.25em;
+  }
 :root{
     --primary-green: hsla(160,13%,33%,1.0);
     --bright-yellow: hsla(50,91%,52%,1.0);
@@ -31,6 +36,11 @@
     font-family: "Markazi Text", serif;
     font-optical-sizing: auto;
     /* font-style: normal; */
+  }
+  .booking-confirmed{
+    background-color: var(--off-black);
+    width: 100%;
+    height: 100%;
   }
 .book-heading{
     font-size: 2.5rem;
@@ -65,6 +75,7 @@
 }
 .booking-form {
     max-width: 400px;
+    height: 100%;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #ccc;
