--- a/src/styles.css
+++ b/src/styles.css
@@ -82,7 +82,6 @@ html{
     padding: 10px;
     background-color:black;
     color: #fff;
-    text-align: center;
   }
 
   /* Outside the grid */
@@ -230,6 +229,20 @@ body{
     font-size: 1rem;
     font-weight: 700;
     color: var(--off-white);
+}
+.foot-btn{
+    width: 100px;
+    height: auto;
+    padding: 8px 16px;
+    border: 0;
+    cursor: pointer;
+    border-radius: 8px;
+    background: var(--off-white);
+    filter: drop-shadow(1px 1px 2px hsla(0,0%,20%,0.8));
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--off-black);
+    margin-top: 3%;
 }
 .reserve-btn:active, .menu-btn:active{
     transform: scale(0.98);
@@ -379,4 +392,14 @@ body{
 }
 button:hover{
     opacity: 0.85;
+}
+.foot-container{
+    width: 85%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 50px;
+    justify-content: space-between;
+    text-decoration: none;
 }
